Pushing up all recent code

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,7 @@ SCRYFALL_RATE_LIMIT_MS=75
 # Cache
 CACHE_DIR=./data/cache
 CACHE_TTL_HOURS=24
+
+# OpenAI
+OPENAI_API_KEY=
+OPENAI_MODEL=gpt-4o-mini
