--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,12 @@ requires-python = ">=3.9"
 dependencies = [
     "httpx>=0.27.0",
     "ijson>=3.2.0",
+    "langchain>=0.2.0",
+    "langchain-openai>=0.1.0",
+    "langgraph>=0.2.0",
     "numpy>=1.24.0",
     "psycopg[binary]>=3.1.0",
+    "pyyaml>=6.0.1",
     "pydantic>=2.5.0",
     "pydantic-settings>=2.1.0",
     "fastapi>=0.110.0",
